# libarch

./: CMakeLists.txt  COPYING.md  README.md  libarch.spec  mit.txt
bindings/: CMakeLists.txt
bindings/go/: CMakeLists.txt
bindings/go/libarch/: CMakeLists.txt
bindings/libarch/: arch.i  basearch.i  typedefs.i
bindings/perl5/: CMakeLists.txt
bindings/perl5/libarch/: CMakeLists.txt
bindings/python3/: CMakeLists.txt
bindings/python3/libarch/: CMakeLists.txt
bindings/ruby/: CMakeLists.txt
bindings/ruby/libarch/: CMakeLists.txt
doc/: Doxyfile.in  c_arch.rst  c_basearch.rst  conf.py.in  index.rst
include/: CMakeLists.txt
include/libarch/: CMakeLists.txt  arch.h  basearch.h
libarch/: CMakeLists.txt  arch.c  libarch.pc.in  list.c  list.h
test/: CMakeLists.txt
test/python3/: CMakeLists.txt
test/python3/libarch/: CMakeLists.txt  test_arch.py  test_basearch.py
